// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders border correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-1 {
  max-width: 100%;
  height: auto;
  border-radius: 16px;
  border: 0.5px solid var(--border-color);
}

<div
    class="figure emotion-0"
    style="width: 700px;"
  >
    <img
      alt="/images/firstcluster.png"
      class="gatsby-image-mmeigs emotion-1"
      height="500"
      src="/images/firstcluster.png"
      style="height: auto;"
      width="700"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-1 {
  max-width: 100%;
  height: auto;
}

<div
    class="figure emotion-0"
    style="width: 700px;"
  >
    <img
      alt="test-alt"
      class="emotion-1 hero-img align-test-align gatsby-image-mmeigs"
      height="3000"
      src="/images/firstcluster.png"
      style="--border-color: #C1C7C6;"
      width="5000"
    />
  </div>
</DocumentFragment>
`;

exports[`renders lightbox correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 700px;
  cursor: pointer;
  margin-top: 24px;
  margin-bottom: 24px;
  display: block;
  max-width: 100%;
}

.emotion-1 {
  max-width: 100%;
  height: auto;
}

.emotion-2 {
  color: #444;
  font-size: 80%;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
}

.dark-theme .emotion-2 {
  color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      role="button"
      tabindex="-1"
    >
      <img
        alt="/images/firstcluster.png"
        class="emotion-1 gatsby-image-mmeigs"
        height="500"
        src="/images/firstcluster.png"
        style="height: auto;"
        width="700"
      />
      <div
        class="emotion-2"
      >
        click to enlarge
      </div>
    </div>
  </div>
</DocumentFragment>
`;
